# packages/web/openapi.json
@@ -3110,6 +3110,21 @@
               }
             ],
             "title": "Tier Used"
+          },
+          "events": {
+            "anyOf": [
+              {
+                "items": {
+                  "additionalProperties": true,
+                  "type": "object"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Events"
           }
         },
         "additionalProperties": false,
